--- a/app/index.html
+++ b/app/index.html
@@ -13,7 +13,6 @@
   <link rel="stylesheet" href="css/style.min.css">
 </head>
 
-
 <body>
   <header class="header">
     <div class="header__slider">
@@ -24,48 +23,74 @@
           <div class="slider-item__info-subtext subtitle-left">Condition</div>
           <div class="slider-item__info-text">Radical</div>
           <a href="#" class="slider-item__info-link">
-            <img src="img/arrows-right.svg" alt="">
+            <img src="image/arrows-right.svg" alt="">
           </a>
         </div>
       </div>
-
       <div class="header__slider-item slider-item">
         <div class="slider-item__info">
           <div class="slider-item__info-subtitle subtitle-left">Surf</div>
-          <div class="slider-item__info-title">South Shore</div>
+          <div class="slider-item__info-title">South Shore </div>
           <div class="slider-item__info-subtext subtitle-left">Condition</div>
           <div class="slider-item__info-text">Radical</div>
           <a href="#" class="slider-item__info-link">
-            <img src="img/arrows-right.svg" alt="">
+            <img src="image/arrows-right.svg" alt="">
           </a>
         </div>
       </div>
-
       <div class="header__slider-item slider-item">
         <div class="slider-item__info">
           <div class="slider-item__info-subtitle subtitle-left">Surf</div>
           <div class="slider-item__info-title">West Shore</div>
-          <div class="slider-item info-subtext subtitle-left">Condition</div>
+          <div class="slider-item__info-subtext subtitle-left">Condition</div>
           <div class="slider-item__info-text">Radical</div>
           <a href="#" class="slider-item__info-link">
-            <img src="img/arrows-right.svg" alt="">
+            <img src="image/arrows-right.svg" alt="">
           </a>
         </div>
       </div>
-
       <div class="header__slider-item slider-item">
         <div class="slider-item__info">
           <div class="slider-item__info-subtitle subtitle-left">Surf</div>
           <div class="slider-item__info-title">East Shore</div>
-          <div class="slider-item info-subtext subtitle-left">Condition</div>
+          <div class="slider-item__info-subtext subtitle-left">Condition</div>
           <div class="slider-item__info-text">Radical</div>
           <a href="#" class="slider-item__info-link">
-            <img src="img/arrows-right.svg" alt="">
+            <img src="image/arrows-right.svg" alt="">
           </a>
         </div>
       </div>
     </div>
+    <div class="slider-dots">
+      <div class="slider-dots__item">
+        <div class="dots-box">
+          <div class="dots-box__number">01</div>
+          <div class="dots-box__name">North Shore</div>
+        </div>
+      </div>
+    </div>
+    <div class="slider-dots__item">
+      <div class="dots-box">
+        <div class="dots-box__number">02</div>
+        <div class="dots-box__name">South Shore</div>
+      </div>
+    </div>
+    <div class="slider-dots__item">
+      <div class="dots-box">
+        <div class="dots-box__number">03</div>
+        <div class="dots-box__name">West Shore</div>
+      </div>
+    </div>
+    <div class="slider-dots__item">
+      <div class="dots-box">
+        <div class="dots-box__number">04</div>
+        <div class="dots-box__name">East Shore</div>
+      </div>
+    </div>
   </header>
+
+
+
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="js/libs.min.js"></script>
