--- a/app/index.html
+++ b/app/index.html
@@ -15,6 +15,34 @@
 
 <body>
   <header class="header">
+    <div class="header__title">
+      go surf
+    </div>
+    <div class="header__aside">
+      <div class="logo">
+        <a href="#">
+          <img src="image/logo.svg" alt="">
+        </a>
+      </div>
+      <nav class="menu">
+        <ul class="menu__list">
+          <li><a href="#"><img src="image/nav-icon-1.svg" alt=""><span>Surf</span></a></li>
+          <li><a href="#"><img src="image/nav-icon-2.svg" alt=""><span>Travel</span></a></li>
+          <li><a href="#"><img src="image/nav-icon-3.svg" alt=""><span>Sleep</span></a></li>
+          <li><a href="#"><img src="image/nav-icon-4.svg" alt=""><span>Shop</span></a></li>
+        </ul>
+      </nav>
+      <div class="header__search">
+        <img src="image/search.svg" alt="">
+      </div>
+      <div class="header__date">
+        20
+        <span>06 | 2018</span>
+      </div>
+      <div class="header__location">
+        California
+      </div>
+    </div>
     <div class="header__slider">
       <div class="header__slider-item slider-item">
         <div class="slider-item__info">
@@ -68,23 +96,23 @@
           <div class="dots-box__name">North Shore</div>
         </div>
       </div>
-    </div>
-    <div class="slider-dots__item">
-      <div class="dots-box">
-        <div class="dots-box__number">02</div>
-        <div class="dots-box__name">South Shore</div>
+      <div class="slider-dots__item">
+        <div class="dots-box">
+          <div class="dots-box__number">02</div>
+          <div class="dots-box__name">South Shore</div>
+        </div>
       </div>
-    </div>
-    <div class="slider-dots__item">
-      <div class="dots-box">
-        <div class="dots-box__number">03</div>
-        <div class="dots-box__name">West Shore</div>
+      <div class="slider-dots__item">
+        <div class="dots-box">
+          <div class="dots-box__number">03</div>
+          <div class="dots-box__name">West Shore</div>
+        </div>
       </div>
-    </div>
-    <div class="slider-dots__item">
-      <div class="dots-box">
-        <div class="dots-box__number">04</div>
-        <div class="dots-box__name">East Shore</div>
+      <div class="slider-dots__item">
+        <div class="dots-box">
+          <div class="dots-box__number">04</div>
+          <div class="dots-box__name">East Shore</div>
+        </div>
       </div>
     </div>
   </header>
@@ -98,3 +126,6 @@
 </body>
 
 </html>
+
+
+<!-- 1hr 42min 50sek -->
